--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -1,3 +1,18 @@
+/* Small differences between solution and my implementation but result is satisfactory to keep.
+All README requirements are met and two solutions look identical when not squished together
+(besides the button height). Official solution adds two divs to html file, one for
+right side of header, one for left. I only add for the left to group together the button
+and profile picture. Real solution uses space-between in overall header to add a space
+between right and left parts. I use margin-left on the right part to separate it from
+the left as mentioned in one of the MDN documents and use a gap of 16 between the logo,
+links, and right header. This results in a 16px space being present when the content
+is squished all the way while it is not present in the solution. The reason my button
+is not as small as the solution is because align-items defaults to stretch, so the
+button is stretched to match the height of the profile image. The solution uses
+align-items on the right header to center vertically the button using its unmodified height. 
+
+BLANK LINES REPRESENT ADDED RULES*/
+
 /* this is some magical font-importing.  
 you'll learn about it later. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
@@ -8,10 +23,19 @@ body {
   font-family: Besley, serif;
 }
 
+/* Represents flex container for overall header. Centers
+items (logo, list, and right part of header container) vertically.
+Includes padding for space between header edges and content. Gaps
+all items 16px. */
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+
+  display: flex;
+  align-items: center;
+  padding: 8px;
+  gap: 16px;
 }
 
 .profile-image {
@@ -29,6 +53,16 @@ body {
   font-style: italic;
 }
 
+/* Added selector for profile class (right part of header), which
+represents a nested flex container. Gap between items (button and
+profile picture) set to 16px. Left margin set to auto to put right
+part at right end of overall header. */
+.profile {
+  display: flex;
+  margin-left: auto;
+  gap: 16px;
+}
+
 button {
   border: none;
   border-radius: 8px;
@@ -43,6 +77,14 @@ a {
   color: rebeccapurple;
 }
 
+/* Unordered list for this stylesheet is a nested flex
+container. Gap between list elements set to 16px and
+padding and margins set to 0 from default values. */
 ul {
   list-style-type: none;
+
+  display: flex;
+  gap: 16px;
+  padding: 0;
+  margin: 0;
 }
